--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         <div class="k-color c-blue1-bg-g"></div>
         <div class="k-color c-green1-bg-g"></div>
       </div>
+      <script src="js/lib/jquery-1.10.2.js"></script>
+      <script src="js/lib/handlebars-v1.3.0.js"></script>
+      <script src="js/lib/ember-1.8.1.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/router.js"></script>
     </div>
   </body>
 </html>
