working on structure

--- a/index.html
+++ b/index.html
@@ -55,34 +55,75 @@
 
 
 </svg>
-    <div class="k-section">
-      <div class="k-section__header">Colors</div>
-      <div class="cf m-t-x3-g">
-        <div class="k-color c-grey1-bg-g"></div>
-        <div class="k-color c-grey2-bg-g"></div>
-        <div class="k-color c-grey3-bg-g"></div>
-        <div class="k-color c-grey4-bg-g"></div>
-        <div class="k-color c-grey5-bg-g"></div>
-        <div class="k-color c-grey6-bg-g"></div>
-        <div class="k-color c-grey7-bg-g"></div>
-        <div class="k-color c-grey8-bg-g"></div>
-        <div class="k-color c-grey9-bg-g"></div>
-        <div class="k-color c-grey10-bg-g"></div>
+    <script type="text/x-handlebars" data-template-name="application">{{outlet}}</script>
+    <script type="text/x-handlebars" data-template-name="colors">
+      <div class="k-section">
+        <div class="k-section__header">Colors</div>
+        <div class="cf m-t-x3-g">
+          <div class="k-color c-grey1-bg-g"></div>
+          <div class="k-color c-grey2-bg-g"></div>
+          <div class="k-color c-grey3-bg-g"></div>
+          <div class="k-color c-grey4-bg-g"></div>
+          <div class="k-color c-grey5-bg-g"></div>
+          <div class="k-color c-grey6-bg-g"></div>
+          <div class="k-color c-grey7-bg-g"></div>
+          <div class="k-color c-grey8-bg-g"></div>
+          <div class="k-color c-grey9-bg-g"></div>
+          <div class="k-color c-grey10-bg-g"></div>
+        </div>
+        <div class="cf">
+          <div class="k-color c-red1-bg-g"></div>
+          <div class="k-color c-red2-bg-g"></div>
+        </div>
+        <div class="cf">
+          <div class="k-color c-facebook-bg-g"></div>
+          <div class="k-color c-blue1-bg-g"></div>
+          <div class="k-color c-green1-bg-g"></div>
+        </div>
       </div>
-      <div class="cf">
-        <div class="k-color c-red1-bg-g"></div>
-        <div class="k-color c-red2-bg-g"></div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="icons">
+      <div class="section-kl">
+        <div class="header-ke">Icons</div>
+        <div class="cf"></div>
+        <div class="k-sample">
+          <div id="b749f3862138d6f5dc48e711cf78d96f" class="k-hash">b749f3862138d6f5dc48e711cf78d96f</div>
+          <div id="" title="" class="icon ">
+            <svg viewBox="0 0 32 32">
+              <use xlink:href="#dribbble-icon"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="k-sample">
+          <div id="3fa272e8fb10c79190156c1cb76e17b8" class="k-hash">3fa272e8fb10c79190156c1cb76e17b8</div>
+          <div id="" title="" class="icon ">
+            <svg viewBox="0 0 32 32">
+              <use xlink:href="#heart-icon"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="k-sample">
+          <div id="1d5ad044bb593b686a15420d384d1ca1" class="k-hash">1d5ad044bb593b686a15420d384d1ca1</div>
+          <div id="" title="" class="icon ">
+            <svg viewBox="0 0 32 32">
+              <use xlink:href="#twitter-icon"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="k-sample">
+          <div id="7e6dd7f5097564bf71405babb48d7f26" class="k-hash">7e6dd7f5097564bf71405babb48d7f26</div>
+          <div id="" title="" class="icon ">
+            <svg viewBox="0 0 32 32">
+              <use xlink:href="#share-icon"></use>
+            </svg>
+          </div>
+        </div>
       </div>
-      <div class="cf">
-        <div class="k-color c-facebook-bg-g"></div>
-        <div class="k-color c-blue1-bg-g"></div>
-        <div class="k-color c-green1-bg-g"></div>
-      </div>
-      <script src="js/lib/jquery-1.10.2.js"></script>
-      <script src="js/lib/handlebars-v1.3.0.js"></script>
-      <script src="js/lib/ember-1.8.1.js"></script>
-      <script src="js/app.js"></script>
-      <script src="js/router.js"></script>
-    </div>
+    </script>
+    <script src="js/lib/jquery-1.10.2.js"></script>
+    <script src="js/lib/handlebars-v1.3.0.js"></script>
+    <script src="js/lib/ember-1.8.1.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/router.js"></script>
   </body>
 </html>
