--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="header-ke">Icons</div>
         <div class="cf"></div>
         <div class="k-sample">
-          <div id="b749f3862138d6f5dc48e711cf78d96f" class="k-hash">b749f3862138d6f5dc48e711cf78d96f</div>
+          <div id="b749f3862138d6f5dc48e711cf78d96f" class="k-hash"></div>
           <div id="" title="" class="icon ">
             <svg viewBox="0 0 32 32">
               <use xlink:href="#dribbble-icon"></use>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="k-sample">
-          <div id="3fa272e8fb10c79190156c1cb76e17b8" class="k-hash">3fa272e8fb10c79190156c1cb76e17b8</div>
+          <div id="3fa272e8fb10c79190156c1cb76e17b8" class="k-hash"></div>
           <div id="" title="" class="icon ">
             <svg viewBox="0 0 32 32">
               <use xlink:href="#heart-icon"></use>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="k-sample">
-          <div id="1d5ad044bb593b686a15420d384d1ca1" class="k-hash">1d5ad044bb593b686a15420d384d1ca1</div>
+          <div id="1d5ad044bb593b686a15420d384d1ca1" class="k-hash"></div>
           <div id="" title="" class="icon ">
             <svg viewBox="0 0 32 32">
               <use xlink:href="#twitter-icon"></use>
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="k-sample">
-          <div id="7e6dd7f5097564bf71405babb48d7f26" class="k-hash">7e6dd7f5097564bf71405babb48d7f26</div>
+          <div id="7e6dd7f5097564bf71405babb48d7f26" class="k-hash"></div>
           <div id="" title="" class="icon ">
             <svg viewBox="0 0 32 32">
               <use xlink:href="#share-icon"></use>
