--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
         <div class="k-color c-facebook-bg-g"></div>
         <div class="k-color c-blue1-bg-g"></div>
         <div class="k-color c-green1-bg-g"></div>
-      </div>
+      </div><a href="#/colors">colors</a><br><a href="#/">index</a>
       <script src="js/lib/jquery-2.1.1.js"></script>
       <script src="js/lib/lodash.underscore.js"></script>
       <script src="js/lib/backbone.js"></script>
+      <script src="js/router.js"></script>
       <script src="js/app.js"></script>
     </div>
   </body>
