--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
       <script src="js/lib/lodash.underscore.js"></script>
       <script src="js/lib/backbone.js"></script>
       <script src="js/router.js"></script>
+      <script src="js/proto-view.js"></script>
+      <script src="js/proto-page-view.js"></script>
       <script src="js/app.js"></script>
     </div>
   </body>
