add pages templates lazy loading

--- a/index.html
+++ b/index.html
@@ -55,36 +55,13 @@
 
 
 </svg>
-    <div class="k-section">
-      <div class="k-section__header">Colors</div>
-      <div class="cf m-t-x3-g">
-        <div class="k-color c-grey1-bg-g"></div>
-        <div class="k-color c-grey2-bg-g"></div>
-        <div class="k-color c-grey3-bg-g"></div>
-        <div class="k-color c-grey4-bg-g"></div>
-        <div class="k-color c-grey5-bg-g"></div>
-        <div class="k-color c-grey6-bg-g"></div>
-        <div class="k-color c-grey7-bg-g"></div>
-        <div class="k-color c-grey8-bg-g"></div>
-        <div class="k-color c-grey9-bg-g"></div>
-        <div class="k-color c-grey10-bg-g"></div>
-      </div>
-      <div class="cf">
-        <div class="k-color c-red1-bg-g"></div>
-        <div class="k-color c-red2-bg-g"></div>
-      </div>
-      <div class="cf">
-        <div class="k-color c-facebook-bg-g"></div>
-        <div class="k-color c-blue1-bg-g"></div>
-        <div class="k-color c-green1-bg-g"></div>
-      </div><a href="#/colors">colors</a><br><a href="#/">index</a>
-      <script src="js/lib/jquery-2.1.1.js"></script>
-      <script src="js/lib/lodash.underscore.js"></script>
-      <script src="js/lib/backbone.js"></script>
-      <script src="js/router.js"></script>
-      <script src="js/proto-view.js"></script>
-      <script src="js/proto-page-view.js"></script>
-      <script src="js/app.js"></script>
-    </div>
+    <div id="js-pages"></div>
+    <script src="js/lib/jquery-2.1.1.js"></script>
+    <script src="js/lib/lodash.underscore.js"></script>
+    <script src="js/lib/backbone.js"></script>
+    <script src="js/proto-view.js"></script>
+    <script src="js/proto-page-view.js"></script>
+    <script src="js/router.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
