--- a/page-templates/icons.html
+++ b/page-templates/icons.html
@@ -1,6 +1,6 @@
 
 <div class="k-sample">
-  <div id="b749f3862138d6f5dc48e711cf78d96f" class="hash-e"></div>
+  <div id="b749f3862138d6f5dc48e711cf78d96f" class="k-hash"></div>
   <div id="" title="" class="icon ">
     <svg viewBox="0 0 32 32">
       <use xlink:href="#dribbble-icon"></use>
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div class="k-sample">
-  <div id="3fa272e8fb10c79190156c1cb76e17b8" class="hash-e"></div>
+  <div id="3fa272e8fb10c79190156c1cb76e17b8" class="k-hash"></div>
   <div id="" title="" class="icon ">
     <svg viewBox="0 0 32 32">
       <use xlink:href="#heart-icon"></use>
@@ -16,7 +16,7 @@
   </div>
 </div>
 <div class="k-sample">
-  <div id="1d5ad044bb593b686a15420d384d1ca1" class="hash-e"></div>
+  <div id="1d5ad044bb593b686a15420d384d1ca1" class="k-hash"></div>
   <div id="" title="" class="icon ">
     <svg viewBox="0 0 32 32">
       <use xlink:href="#twitter-icon"></use>
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div class="k-sample">
-  <div id="7e6dd7f5097564bf71405babb48d7f26" class="hash-e"></div>
+  <div id="7e6dd7f5097564bf71405babb48d7f26" class="k-hash"></div>
   <div id="" title="" class="icon ">
     <svg viewBox="0 0 32 32">
       <use xlink:href="#share-icon"></use>
