working on styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
   <body><svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display:none;" xmlns:xlink="http://www.w3.org/1999/xlink">
 
+	<g id="menu-icon">
+		<rect x="0" y="0" width="32" height="12"></rect>
+    <rect x="0" y="20" width="32" height="12"></rect>
+	</g>
+
+	<g id="main-logo-icon">
+		<path id="Rectangle-22" fill="#F942A8" d="M3.2,0L3.2,0c1.767,0,3.2,1.433,3.2,3.2l0,0c0,1.767-1.433,3.2-3.2,3.2l0,0
+			C1.433,6.4,0,4.967,0,3.2l0,0C0,1.433,1.433,0,3.2,0z"/>
+		<path id="Rectangle-23" fill="#00AEFF" d="M28.8,0L28.8,0C30.567,0,32,1.433,32,3.2l0,0c0,1.767-1.433,3.2-3.2,3.2l0,0
+			c-1.768,0-3.2-1.433-3.2-3.2l0,0C25.6,1.433,27.032,0,28.8,0z"/>
+		<path id="Rectangle-25" fill="#4D4D4D" d="M3.2,25.6L3.2,25.6c1.767,0,3.2,1.433,3.2,3.2l0,0c0,1.768-1.433,3.2-3.2,3.2l0,0
+			C1.433,32,0,30.567,0,28.8l0,0C0,27.032,1.433,25.6,3.2,25.6z"/>
+		<path id="Rectangle-24" fill="#50E3C2" d="M28.8,25.6L28.8,25.6c1.768,0,3.2,1.433,3.2,3.2l0,0c0,1.768-1.433,3.2-3.2,3.2l0,0
+			c-1.768,0-3.2-1.433-3.2-3.2l0,0C25.6,27.032,27.032,25.6,28.8,25.6z"/>
+	</g>
+
 	<path id="bell-icon" fill-rule="evenodd" clip-rule="evenodd" d="M31.36,26.481c0-0.812-0.686-1.472-1.53-1.472c-2.114,0-3.826-1.646-3.826-3.678
 	v-8.827c0-4.601-3.4-8.443-7.93-9.357c0.141-0.286,0.222-0.604,0.222-0.942C18.296,0.988,17.268,0,16,0
 	c-1.269,0-2.296,0.988-2.296,2.208c0,0.337,0.081,0.656,0.222,0.942c-4.529,0.913-7.929,4.755-7.929,9.357v8.828
@@ -55,7 +71,119 @@
 
 
 </svg>
-    <div id="js-pages"></div>
+    <div class="k-header">
+      <div class="k-main-logo-icon">
+        <div id="" title="" class="icon ">
+          <svg viewBox="0 0 32 32">
+            <use xlink:href="#main-logo-icon"></use>
+          </svg>
+        </div>
+      </div>
+      <div class="k-menu-icon">
+        <div id="" title="" class="icon ">
+          <svg viewBox="0 0 32 32">
+            <use xlink:href="#menu-icon"></use>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div id="js-pages" class="cf"></div>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
+    <p>  aaa</p>
     <script src="js/lib/jquery-2.1.1.js"></script>
     <script src="js/lib/lodash.underscore.js"></script>
     <script src="js/lib/backbone.js"></script>
