--- a/page-templates/icons.html
+++ b/page-templates/icons.html
@@ -31,3 +31,11 @@
     </svg>
   </div>
 </div>
+<div class="k-sample">
+  <div id="b3b8499d4aa6dade287533ab49b44ef2" class="k-hash"></div>
+  <div id="" title="" class="icon ">
+    <svg viewBox="0 0 32 32">
+      <use xlink:href="#menu-icon"></use>
+    </svg>
+  </div>
+</div>
