--- a/index.html
+++ b/index.html
@@ -87,103 +87,7 @@
         </div>
       </div>
     </div>
-    <div id="js-pages" class="cf"></div>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
-    <p>  aaa</p>
+    <div id="js-pages" class="k-pages"></div>
     <script src="js/lib/jquery-2.1.1.js"></script>
     <script src="js/lib/lodash.underscore.js"></script>
     <script src="js/lib/backbone.js"></script>
