--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
         </div>
       </div>
     </div>
+    <div class="k-nav">
+      <div class="k-navigation-header">Pages</div><a href="#" class="k-navigation-link"> Colors</a><a href="#" class="k-navigation-link"> Type</a><a href="#" class="k-navigation-link"> Icons</a><a href="#" class="k-navigation-link"> Buttons</a><a href="#" class="k-navigation-link"> Forms</a>
+    </div>
     <div id="js-pages" class="k-pages"></div>
     <script src="js/lib/jquery-2.1.1.js"></script>
     <script src="js/lib/lodash.underscore.js"></script>
