--- a/index.html
+++ b/index.html
@@ -88,14 +88,22 @@
       </div>
     </div>
     <div class="k-nav">
-      <div class="k-navigation-header">Pages</div><a href="#" class="k-navigation-link"> Colors</a><a href="#" class="k-navigation-link"> Type</a><a href="#" class="k-navigation-link"> Icons</a><a href="#" class="k-navigation-link"> Buttons</a><a href="#" class="k-navigation-link"> Forms</a>
+      <div class="k-navigation-header">Pages</div>
+      <div id="js-main-nav">
+      </div>
     </div>
     <div id="js-pages" class="k-pages"></div>
+    <script id="js-navigation-item-template" type="text/template">
+      <% _.each(data.links, function(link) { %>
+      <% if (link !== 'index') { %><a href="#/&lt;%= link %&gt;" class="js-nav-&lt;%= link %&gt; k-navigation-link"><%= link %></a><% } %>
+      <% }); %>
+    </script>
     <script src="js/lib/jquery-2.1.1.js"></script>
     <script src="js/lib/lodash.underscore.js"></script>
     <script src="js/lib/backbone.js"></script>
     <script src="js/proto-view.js"></script>
     <script src="js/proto-page-view.js"></script>
+    <script src="js/navigation-v.js"></script>
     <script src="js/router.js"></script>
     <script src="js/app.js"></script>
   </body>
