--- a/.docit/index.html
+++ b/.docit/index.html
@@ -1,110 +1,53 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>docit</title>
-    <link rel="stylesheet" type="text/css" href=".docit/css/main.css">
-    <link rel="stylesheet" type="text/css" href=".docit/css/assets/kit.css">
-  </head>
-  <body><svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display:none;" xmlns:xlink="http://www.w3.org/1999/xlink">
+doctype
+html
+  head
+    meta(charset='UTF-8')
+    title docit
+    link(rel="stylesheet", type="text/css", href=".docit/css/main.css")
+    link(rel="stylesheet", type="text/css", href=".docit/css/assets/kit.css")
+    //- link(rel="stylesheet", href="css-assets/font/stylesheet.css", type="text/css", charset="utf-8")
+  body
+    include ../icons.svg
+    .k-header
+      .k-main-logo-icon
+        - el = { path: 'main-logo-icon', class: '', id: ''} 
+        include partials/icon
+      .k-menu-icon
+        - el = { path: 'menu-icon', class: '', id: ''} 
+        include partials/icon
 
-	<g id="menu-icon">
-		<rect x="0" y="0" width="32" height="12"></rect>
-    <rect x="0" y="20" width="32" height="12"></rect>
-	</g>
+    .k-nav
+      .k-navigation-header Pages
+      #js-main-nav
+        //- a(href="#/colors").k-navigation-link.is-check  Colors
+        //- a(href="#/type").k-navigation-link  Type
+        //- a(href="#/icons").k-navigation-link  Icons
+        //- a(href="#/buttons").k-navigation-link  Buttons
+        //- a(href="#/forms").k-navigation-link  Forms
 
-	<g id="main-logo-icon">
-		<path id="Rectangle-22" fill="#F942A8" d="M3.2,0L3.2,0c1.767,0,3.2,1.433,3.2,3.2l0,0c0,1.767-1.433,3.2-3.2,3.2l0,0
-			C1.433,6.4,0,4.967,0,3.2l0,0C0,1.433,1.433,0,3.2,0z"/>
-		<path id="Rectangle-23" fill="#00AEFF" d="M28.8,0L28.8,0C30.567,0,32,1.433,32,3.2l0,0c0,1.767-1.433,3.2-3.2,3.2l0,0
-			c-1.768,0-3.2-1.433-3.2-3.2l0,0C25.6,1.433,27.032,0,28.8,0z"/>
-		<path id="Rectangle-25" fill="#4D4D4D" d="M3.2,25.6L3.2,25.6c1.767,0,3.2,1.433,3.2,3.2l0,0c0,1.768-1.433,3.2-3.2,3.2l0,0
-			C1.433,32,0,30.567,0,28.8l0,0C0,27.032,1.433,25.6,3.2,25.6z"/>
-		<path id="Rectangle-24" fill="#50E3C2" d="M28.8,25.6L28.8,25.6c1.768,0,3.2,1.433,3.2,3.2l0,0c0,1.768-1.433,3.2-3.2,3.2l0,0
-			c-1.768,0-3.2-1.433-3.2-3.2l0,0C25.6,27.032,27.032,25.6,28.8,25.6z"/>
-	</g>
+    #js-pages.k-pages
 
-	<path id="bell-icon" fill-rule="evenodd" clip-rule="evenodd" d="M31.36,26.481c0-0.812-0.686-1.472-1.53-1.472c-2.114,0-3.826-1.646-3.826-3.678
-	v-8.827c0-4.601-3.4-8.443-7.93-9.357c0.141-0.286,0.222-0.604,0.222-0.942C18.296,0.988,17.268,0,16,0
-	c-1.269,0-2.296,0.988-2.296,2.208c0,0.337,0.081,0.656,0.222,0.942c-4.529,0.913-7.929,4.755-7.929,9.357v8.828
-	c0,2.031-1.714,3.678-3.827,3.678c-0.845,0-1.53,0.658-1.53,1.471s0.686,1.472,1.53,1.472h3.827h6.941C12.938,30.188,14.31,32,16,32
-	s3.062-1.812,3.062-4.046h6.942h3.826C30.675,27.952,31.36,27.294,31.36,26.481"/>
-
-	<path id="share-icon" d="M28,24c-0.973,0-1.832,0.391-2.523,0.965l-6.098-4.352C19.766,19.816,20,18.941,20,18c0-1.293-0.422-2.488-1.117-3.465
-		l7.133-7.137C26.609,7.746,27.262,8,28,8c2.211,0,4-1.789,4-4s-1.789-4-4-4s-4,1.789-4,4c0,0.738,0.254,1.391,0.602,1.984
-		l-7.133,7.137C16.484,12.418,15.297,12,14,12c-2.289,0-4.258,1.301-5.27,3.191l-4.816-1.609C3.719,12.684,2.957,12,2,12
-		c-1.105,0-2,0.895-2,2s0.895,2,2,2c0.504,0,0.953-0.203,1.305-0.512l4.789,1.598C8.047,17.387,8,17.688,8,18c0,3.312,2.688,6,6,6
-		c1.648,0,3.145-0.668,4.23-1.746l6.059,4.324C24.117,27.023,24,27.496,24,28c0,2.207,1.789,4,4,4s4-1.793,4-4S30.211,24,28,24z"/>
-
-	<path id="facebook-icon" fill-rule="evenodd" clip-rule="evenodd" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16
-	C32,7.164,24.837,0,16,0z M19.404,16.006h-2.227v8.199h-3.301v-8.199h-1.569v-2.897h1.569v-1.874c0-1.342,0.618-3.439,3.331-3.439
-	l2.445,0.01v2.812h-1.775c-0.289,0-0.699,0.149-0.699,0.789v1.703h2.515L19.404,16.006z"/>
-
-
-	<path id="twitter-icon" fill-rule="evenodd" clip-rule="evenodd" d="M10.064,29.419c-3.708,0-7.159-1.121-10.064-3.044
-	c0.514,0.062,1.036,0.095,1.566,0.095c3.076,0,5.907-1.083,8.154-2.9c-2.873-0.055-5.297-2.013-6.133-4.705
-	c0.4,0.079,0.812,0.122,1.235,0.122c0.599,0,1.178-0.083,1.729-0.238c-3.003-0.622-5.267-3.361-5.267-6.644c0-0.028,0-0.057,0-0.085
-	c0.885,0.508,1.898,0.812,2.974,0.847c-1.762-1.214-2.921-3.289-2.921-5.639c0-1.242,0.324-2.406,0.889-3.406
-	C5.466,7.92,10.303,10.618,15.76,10.9c-0.112-0.496-0.17-1.013-0.17-1.544c0-3.742,2.939-6.775,6.565-6.775
-	c1.888,0,3.594,0.823,4.791,2.14c1.496-0.304,2.901-0.868,4.17-1.644c-0.49,1.582-1.531,2.91-2.888,3.749
-	C29.558,6.661,30.822,6.297,32,5.757c-0.88,1.359-1.993,2.553-3.276,3.508c0.014,0.291,0.02,0.583,0.02,0.876
-	C28.743,19.095,22.139,29.419,10.064,29.419"/>
-
-	<path id="heart-icon" fill-rule="evenodd" clip-rule="evenodd" d="M32,10.92c0-4.878-3.857-8.833-8.615-8.833c-3.135,0-5.877,1.717-7.385,4.282
-	c-1.507-2.565-4.25-4.282-7.384-4.282C3.856,2.087,0,6.042,0,10.92c0,2.538,1.046,4.825,2.719,6.437H2.717l12.334,12.1
-	c0.227,0.279,0.566,0.457,0.946,0.457c0.352,0,0.669-0.153,0.894-0.398l12.394-12.158h-0.004C30.954,15.746,32,13.458,32,10.92"/>
-
-	<path id="dribbble-icon" fill-rule="evenodd" clip-rule="evenodd" d="M8.773,26.348c1.831,1.409,4.039,2.302,6.315,2.5
-	c1.879,0.188,3.789-0.108,5.557-0.785c-0.592-3.219-1.413-6.393-2.467-9.481C14.274,19.889,10.932,22.759,8.773,26.348z
-	 M20.646,17.729c0.982,2.808,1.78,5.681,2.377,8.594c2.779-1.888,4.761-4.89,5.364-8.176C25.855,17.575,23.224,17.365,20.646,17.729
-	z M3.615,16.06c-0.066,2.971,1.014,5.945,2.949,8.198c1.162-1.771,2.61-3.351,4.24-4.703c1.842-1.518,3.963-2.697,6.228-3.453
-	c-0.238-0.552-0.465-1.108-0.724-1.65C12.213,15.728,7.892,16.16,3.615,16.06z M19.097,13.254c0.292,0.651,0.574,1.307,0.853,1.964
-	c0.391-0.044,0.775-0.122,1.167-0.16c2.596-0.323,5.235-0.116,7.787,0.425c-0.117-2.615-1.095-5.171-2.729-7.226
-	C24.244,10.438,21.769,12.094,19.097,13.254z M5.858,8.998c-0.784,1.192-1.426,2.5-1.73,3.895c3.827,0.086,7.674-0.343,11.355-1.381
-	c-0.57-1.109-1.222-2.176-1.892-3.229c-0.824-1.261-1.702-2.491-2.686-3.637C8.867,5.62,7.113,7.147,5.858,8.998z M13.419,3.91
-	c1.625,2.167,3.03,4.502,4.256,6.929c2.295-1.021,4.454-2.463,6.067-4.446c-1.275-1.053-2.76-1.839-4.334-2.302
-	C17.469,3.521,15.389,3.461,13.419,3.91z M14.372,0.082c2.204-0.222,4.457,0.008,6.564,0.693c3.15,1.013,5.957,3.043,7.92,5.704
-	c1.828,2.445,2.917,5.431,3.108,8.478c0.207,3.071-0.497,6.201-2.018,8.88c-1.185,2.125-2.879,3.955-4.874,5.343
-	c-1.888,1.289-4.045,2.193-6.301,2.574c-2.434,0.441-4.97,0.284-7.339-0.417c-2.598-0.772-4.992-2.22-6.881-4.162
-	c-1.983-2.025-3.418-4.587-4.087-7.344c-0.654-2.638-0.616-5.441,0.103-8.062c0.488-1.792,1.296-3.495,2.368-5.011
-	c1.16-1.623,2.615-3.036,4.279-4.137C9.351,1.218,11.826,0.33,14.372,0.082z"/>
-
-
-</svg>
-    <div class="k-header">
-      <div class="k-main-logo-icon">
-        <div id="" title="" class="icon ">
-          <svg viewBox="0 0 32 32">
-            <use xlink:href="#main-logo-icon"></use>
-          </svg>
-        </div>
-      </div>
-      <div class="k-menu-icon">
-        <div id="" title="" class="icon ">
-          <svg viewBox="0 0 32 32">
-            <use xlink:href="#menu-icon"></use>
-          </svg>
-        </div>
-      </div>
-    </div>
-    <div class="k-nav">
-      <div class="k-navigation-header">Pages</div>
-      <div id="js-main-nav">
-      </div>
-    </div>
-    <div id="js-pages" class="k-pages"></div>
-    <script id="js-navigation-item-template" type="text/template">
+    //- TEMPLATES
+    script#js-navigation-item-template(type="text/template")
       <% _.each(data.links, function(link) { %>
-      <% if (link !== 'index') { %><a href="#/&lt;%= link %&gt;" class="js-nav-&lt;%= link %&gt; k-navigation-link"><%= link %></a><% } %>
+      <% if (link !== 'index') { %>
+      a(href="#/<%= link %>", class="js-nav-<%= link %>").k-navigation-link <%= link %>
+      <% } %>
       <% }); %>
-    </script>
-    <script src=".docit/js/lib/jquery-2.1.1.js"></script>
-    <script src=".docit/js/lib/lodash.underscore.js"></script>
-    <script src=".docit/js/lib/backbone.js"></script>
-    <script src=".docit/js/proto-view.js"></script>
-    <script src=".docit/js/proto-page-view.js"></script>
-    <script src=".docit/js/navigation-v.js"></script>
-    <script src=".docit/js/router.js"></script>
-    <script src=".docit/js/app.js"></script>
-  </body>
-</html>
+
+    script(src=".docit/js/lib/jquery-2.1.1.js")
+    script(src=".docit/js/lib/lodash.underscore.js")
+    script(src=".docit/js/lib/backbone.js")
+    
+    //- VIEWS
+    script(src=".docit/js/proto-view.js")
+    script(src=".docit/js/proto-page-view.js")
+    script(src=".docit/js/navigation-v.js")
+
+    script(src=".docit/js/router.js")
+
+    script(src=".docit/js/app.js")
+
+
+
+
